package com.aluengo.cleancomposerickandmorty.core.utils

object TestTags {

    const val SearchField: String = "SearchField"
    const val SearchIcon = "searchIcon"
    const val LeadingSearchIcon = "LeadingSearchIcon"
    const val CharacterView = "CharacterView"
}